adjust about overflowing

--- a/index.html
+++ b/index.html
@@ -67,34 +67,43 @@
         <article>
           <ul>
             <li>
-              <img src="./src/images/SOURCE.jpg" alt="" />
-              <p>
-                Welcome to Source Creations, where our journey began with a
-                simple dream - to transform the way your audience percieve you.
-              </p>
+              <a href="#">
+                <img src="./src/images/SOURCE.jpg" alt="" />
+                <p>
+                  Welcome to Source Creations, where our journey began with a
+                  simple dream - to transform the way your audience percieve
+                  you.
+                </p>
+              </a>
             </li>
             <li>
-              <img src="./src/images/SOURCE.jpg" alt="" />
-              <p>
-                Founded in year 2012, we've since grown into a passionate team
-                of professionals dedicated to provide optimal sales and drive
-                traffick to funnel.
-              </p>
+              <a href="#">
+                <img src="./src/images/SOURCE.jpg" alt="" />
+                <p>
+                  Founded in year 2012, we've since grown into a passionate team
+                  of professionals dedicated to provide optimal sales and drive
+                  traffick to funnel.
+                </p>
+              </a>
             </li>
             <li>
-              <img src="./src/images/SOURCE.jpg" alt="" />
-              <p>
-                Meet the driving force behind our success - From left Manager,
-                Director, Consultant, Brand Strategist.
-              </p>
+              <a href="#">
+                <img src="./src/images/SOURCE.jpg" alt="" />
+                <p>
+                  Meet the driving force behind our success - From left Manager,
+                  Director, Consultant, Brand Strategist.
+                </p>
+              </a>
             </li>
             <li>
-              <img src="./src/images/SOURCE.jpg" alt="" />
-              <p>
-                Our commitment to excellence extends beyond our
-                services/products. We're proud of our involvement in Africa
-                Builders of today and Bold Culture World wide..
-              </p>
+              <a href="#">
+                <img src="./src/images/SOURCE.jpg" alt="" />
+                <p>
+                  Our commitment to excellence extends beyond our
+                  services/products. We're proud of our involvement in Africa
+                  Builders of today and Bold Culture World wide..
+                </p>
+              </a>
             </li>
           </ul>
         </article>
