almost to productions

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <ul>
             <li>
               <a href="#">
-                <img src="./src/images/SOURCE.jpg" alt="" />
+                <img src="./src/images/womendir.jpg" alt="" />
                 <p>
                   Welcome to Source Creations, where our journey began with a
                   simple dream - to transform the way your audience percieve
@@ -78,7 +78,7 @@
             </li>
             <li>
               <a href="#">
-                <img src="./src/images/SOURCE.jpg" alt="" />
+                <img src="./src/images/growth.webp" alt="" />
                 <p>
                   Founded in year 2012, we've since grown into a passionate team
                   of professionals dedicated to provide optimal sales and drive
@@ -88,7 +88,7 @@
             </li>
             <li>
               <a href="#">
-                <img src="./src/images/SOURCE.jpg" alt="" />
+                <img src="./src/images/team.jpeg" alt="" />
                 <p>
                   Meet the driving force behind our success - From left Manager,
                   Director, Consultant, Brand Strategist.
@@ -97,7 +97,7 @@
             </li>
             <li>
               <a href="#">
-                <img src="./src/images/SOURCE.jpg" alt="" />
+                <img src="./src/images/comitimg.jpg" alt="" />
                 <p>
                   Our commitment to excellence extends beyond our
                   services/products. We're proud of our involvement in Africa
@@ -113,12 +113,25 @@
     <section id="services" class="section">
       <div class="title">
         <h2>our <span>services</span></h2>
+        <ul class="padding-service">
+          <li>Search engine optimization (SEO)</li>
+          <li>Radio Jingle advertisements</li>
+          <li>Social media management</li>
+          <li>Advertisement campaigns</li>
+          <li>Television advertisements</li>
+          <li>Copywriting · Artwork</li>
+          <li>Web development</li>
+          <li>Consultation</li>
+        </ul>
       </div>
     </section>
     <!-- tours -->
     <section id="tours" class="section">
       <div class="title">
         <h2>featured <span>tours</span></h2>
+        <video class="video-container" controls muted autoplay loop>
+          <source src="./src/images/web advert.mp4" type="video/mp4" />
+        </video>
       </div>
     </section>
     <!-- footers -->
@@ -127,6 +140,7 @@
         copyright &copy; source creations advertising company
         <span class="date">2020</span>. all right reserved
       </p>
+      <p>Raji's Solutions Ltd</p>
     </footer>
     <!-- back to top -->
     <a href="#home" class="scroll-link top-link">
